--- a/public/controller.html
+++ b/public/controller.html
@@ -2,23 +2,6 @@
 <html>
 <head>
     <title>PONG Controller</title>
-    <style>
-        canvas {
-            height: 100%;
-            width: 100%;
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-        }
-    </style>
-</head>
-<body>
-
-    <canvas width="320" height="200"></canvas>
-    <!--<br>
-    <textarea rows="15" cols="60"></textarea>-->
     <script>
     var bgColor = 'rgb(125, 125, 125)';
 
@@ -67,6 +50,9 @@
             n = 0;
 
         log('init');
+
+		cnv.width = window.innerWidth;
+		cnv.height = window.innerHeight;
 
         ctx.fillStyle = bgColor;
         ctx.fillRect(0, 0, cnv.width, cnv.height);
@@ -172,5 +158,16 @@
         window.addEventListener('load', unsup, false);
     }
     </script>
+    <style>
+		html,
+		body {
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+		}
+    </style>
+</head>
+<body>
+    <canvas></canvas>
 </body>
 </html>
