--- a/public/controller.html
+++ b/public/controller.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Chrome -->
+	<link rel="manifest" href="manifest.json">
+
+	<!-- Mobile Safari -->
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	<link rel="apple-touch-icon" href="images/touch-icon-iphone.png"><!-- 60x60 -->
+	<link rel="apple-touch-icon" sizes="76x76" href="images/touch-icon-ipad.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="images/touch-icon-iphone-retina.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="images/touch-icon-ipad-retina.png">
+	<link rel="apple-touch-startup-image" href="images/instructions.png">
+
     <title>PONG Controller</title>
     <script src="controller.js"></script>
     <style>
